# video-generation-iscas2026

./: .gitignore  README.md  gemm_i8w8_288_bias_dequant_vcu_trace.txt  gemm_i8w8_288_bias_mpt_trace.txt
c/: .clang-format  CMakeLists.txt  gemm_i8w8_288_bias_mpt_trace.txt
c/csrc/: CMakeLists.txt
c/csrc/interface/: CMakeLists.txt  interface.cpp
c/csrc/test/: CMakeLists.txt
c/csrc/test/dma_test/: CMakeLists.txt  test_crossdie_load_ddr.cpp  test_crossdie_load_ddr_nocheck.cpp  test_crossdie_load_sram.cpp  test_crossdie_store_ddr.cpp  test_crossdie_store_ddr_nocheck.cpp  test_crossdie_store_sram.cpp  test_crossdie_store_sram_nocheck.cpp  test_datawidth_convertor_ifmapscale.cpp  test_datawidth_convertor_psum.cpp  test_dispatch.cpp  test_load_master.cpp  test_load_psum_1024bit.cpp  test_load_psum_128bit.cpp  test_load_psum_256bit.cpp  test_load_psum_512bit.cpp  test_store_master.cpp  test_sync_indie.cpp  test_sync_iteration.cpp
c/csrc/test/fused_mode_test/: CMakeLists.txt  test.cpp  test_conv1x1half_bias_resaddbf16_fswish_int4_parallelism_convert.cpp  test_conv1x1half_bias_resaddfp16_ftanh_bf16_parallelism_convert.cpp  test_conv1x1half_bias_resaddfp16_tanh_bf16_parallelism_convert.cpp  test_conv1x1half_bias_resaddfp_fgelu_int4_parallelism_convert.cpp  test_conv1x1half_bias_resaddfp_gelu_int4_parallelism_convert.cpp  test_conv1x1half_bias_resaddfp_mish_int4_parallelism_convert.cpp  test_conv1x1half_bias_resaddint16_fsigmoid_bf16_parallelism_convert.cpp  test_conv1x1half_bias_resaddint4_fmish_bf16_parallelism_convert.cpp  test_conv3x3bf16_bias_resaddint8_fgelu_int4_parallelism_convert.cpp  test_conv3x3bf16_bias_resaddint8_softplus_int4_parallelism_convert.cpp  test_conv3x3bf16_bias_resaddint8_swish_int4_parallelism_convert.cpp  test_conv3x3bf16fp16_bias_resaddint8_fgelu_int4_parallelism_convert.cpp  test_conv3x3fp16bf16_bias_resaddint8_fgelu_half_parallelism_convert.cpp  test_conv3x3half_bias_resaddint8_fgelu_half_parallelism_convert.cpp  test_conv3x3half_bias_resaddint8_sigmoid_half_parallelism_convert.cpp  test_conv5x5bf16_bias_resaddint8_fgelu_half_parallelism_convert.cpp  test_conv5x5bf16_bias_resaddint8_leakyrelu_half_parallelism_convert.cpp  test_conv5x5half_bias_resaddfp_fgelu_int4_parallelism_convert.cpp  test_conv5x5half_bias_resaddfp_relu_int4_parallelism_convert.cpp  test_conv5x5half_bias_resaddfp_selu_int4_parallelism_convert.cpp  test_gemm_bias_resaddfp_fgelu_int4_parallelism_convert.cpp
c/csrc/test/irq_test/: CMakeLists.txt  npu_err_pcie_irq.cpp  npu_outlier_pcie_irq.cpp
c/csrc/test/llama_test/: CMakeLists.txt  llama_attention.cpp  llama_mlp.cpp  llama_rope_embedding.cpp  test_llama_attention_op.cpp  test_llama_block_op.cpp  test_llama_mlp_op.cpp  test_rope_embedding_op.cpp
c/csrc/test/load_config_test/: CMakeLists.txt  conv_config_conv.cpp
c/csrc/test/pea_test/: CMakeLists.txt
c/csrc/test/pea_test/conv1x1/: CMakeLists.txt  test_conv_1x1_bfxbf.cpp  test_conv_1x1_bfxfp.cpp  test_conv_1x1_bfxi4.cpp  test_conv_1x1_bfxi8.cpp  test_conv_1x1_fpxbf.cpp  test_conv_1x1_fpxfp.cpp  test_conv_1x1_fpxi4.cpp  test_conv_1x1_fpxi8.cpp  test_conv_1x1_i4nxi4.cpp  test_conv_1x1_i4nxi4_outlier.cpp  test_conv_1x1_i4nxi4n.cpp  test_conv_1x1_i4nxi4n_outlier.cpp  test_conv_1x1_i4nxi8.cpp  test_conv_1x1_i4nxi8_outlier.cpp  test_conv_1x1_i4xbf.cpp  test_conv_1x1_i4xfp.cpp  test_conv_1x1_i4xi4.cpp  test_conv_1x1_i4xi4_outlier.cpp  test_conv_1x1_i4xi4_pvsq.cpp  test_conv_1x1_i4xi4n.cpp  test_conv_1x1_i4xi4n_outlier.cpp  test_conv_1x1_i4xi8.cpp  test_conv_1x1_i4xi8_outlier.cpp  test_conv_1x1_i4xi8_pvsq.cpp  test_conv_1x1_i8xbf.cpp  test_conv_1x1_i8xfp.cpp  test_conv_1x1_i8xi4.cpp  test_conv_1x1_i8xi4_outlier.cpp  test_conv_1x1_i8xi4_pvsq.cpp  test_conv_1x1_i8xi4n.cpp  test_conv_1x1_i8xi4n_outlier.cpp  test_conv_1x1_i8xi8.cpp  test_conv_1x1_i8xi8_outlier.cpp  test_conv_1x1_i8xi8_pvsq.cpp
c/csrc/test/python_test/: CMakeLists.txt  gemm_sim.cpp  llama_block_sim.cpp  rmsnorm_sim.cpp  softmax_sim.cpp  swish_sim.cpp
c/csrc/test/stdit/: CMakeLists.txt  cross_att_linear_fuse_path.cpp  layernorm.cpp  quant.cpp  test_gemm_288_i8w8_bias.cpp  test_load.cpp  test_mul_reducesum_pipeline_fuse.cpp  test_mulrec_addgelu_pipeline_fuse.cpp  test_quant.cpp  test_quant_fuse_mode.cpp  test_quant_fuse_mode_test_psum_1.cpp
c/csrc/test/transformer/: mha.cpp  mha_simple.cpp
c/csrc/test/vcu_test/: CMakeLists.txt
c/include/: addr.h  addr_for_llama.h  addr_for_stdit.h  addr_for_transformer.h  npu_insn_u.h  write_reg.h
c/include/common/: assert_with_message.h  cfg.h  command_line.h  file_utils.h  insn.h  read_cfg.h  type_utils.h
c/include/compute_model/common/: bf16.h  file_op.h  fp16.h  gen_data.h  subbyte.h  tensor.h
c/include/compute_model/conv/: conv2d.h
c/include/compute_model/function/: func_from_lib.h  reduce.h  tensor_function.h
c/include/compute_model/gemm/: gemm.h
c/include/compute_model/mpt/: adder_float.h  mpt.h  multiplier_fp16.h  multiplier_int4.h
c/include/compute_model/quant/: custom_fma.h
c/include/compute_model/sample/: avgpool.h  maxpool.h  upsample.h
c/include/compute_model/sparse/: sparse.h
c/include/compute_model/transformer/: llama_attention.h  llama_block.h  llama_mlp.h  mha.h  rmsnorm.h  rope_embedding.h  softmax.h
c/include/instruction/: instruction.h  load_instruction.h  parser.h  pea_instruction.h  store_instruction.h  synchronize_instruction.h  vcu_instruction.h
c/include/multi_core/: set_core_id.h
c/include/multi_issue/: multi_issue.h
c/include/pea/: pea_insn.h
c/include/sample/: avgpool.h  maxpool.h  upsample.h
c/include/stdit/: gemm_i8w8.h  quant.h
c/include/store_master/: store_master_insn.h
c/include/transformer/: llama_attention.h  llama_block.h  llama_mlp.h  mha.h  mha_multi_core.h  mha_simple.h  rmsnorm.h  rope_embedding.h  softmax.h
c/include/vcu/: vcu_insn.h  vcu_opcode.h  vcu_operation.h
fast_func_compute/: CMakeLists.txt
fast_func_compute/csrc/: activation_table.h  exp2_table.h  fast_activation.h  func.h  int_op.h  interface.cpp  log2_table.h  query.h  reciprocal_table.h  rsqrt_table.h  sin_table.h
(+1045 files in other folders)
