function(compile fname)
  add_executable(${fname} ${fname}.cpp)
  target_link_libraries(${fname} dl)
endfunction()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/exe)

# compile(test)
# compile(test_conv3x3bf16_bias_resaddint8_swish_int4_parallelism_convert)
compile(test_conv1x1half_bias_resaddbf16_fswish_int4_parallelism_convert)     
# compile(test_conv3x3bf16fp16_bias_resaddint8_fgelu_int4_parallelism_convert)
# compile(test_conv1x1half_bias_resaddfp16_ftanh_bf16_parallelism_convert)      
# compile(test_conv3x3fp16bf16_bias_resaddint8_fgelu_half_parallelism_convert)
# compile(test_conv1x1half_bias_resaddfp16_tanh_bf16_parallelism_convert)       
# compile(test_conv3x3half_bias_resaddint8_fgelu_half_parallelism_convert)
# compile(test_conv1x1half_bias_resaddfp_fgelu_int4_parallelism_convert)        
# compile(test_conv3x3half_bias_resaddint8_sigmoid_half_parallelism_convert)
# compile(test_conv1x1half_bias_resaddfp_gelu_int4_parallelism_convert)         
# compile(test_conv5x5bf16_bias_resaddint8_fgelu_half_parallelism_convert)
# compile(test_conv1x1half_bias_resaddfp_mish_int4_parallelism_convert)         
# compile(test_conv5x5bf16_bias_resaddint8_leakyrelu_half_parallelism_convert)
# compile(test_conv1x1half_bias_resaddint16_fsigmoid_bf16_parallelism_convert)  
# compile(test_conv5x5half_bias_resaddfp_fgelu_int4_parallelism_convert)
# compile(test_conv1x1half_bias_resaddint4_fmish_bf16_parallelism_convert)      
# compile(test_conv5x5half_bias_resaddfp_relu_int4_parallelism_convert)
# compile(test_conv3x3bf16_bias_resaddint8_fgelu_int4_parallelism_convert)      
# compile(test_conv5x5half_bias_resaddfp_selu_int4_parallelism_convert)
# compile(test_conv3x3bf16_bias_resaddint8_softplus_int4_parallelism_convert)   
compile(test_gemm_bias_resaddfp_fgelu_int4_parallelism_convert)