add_subdirectory(conv1x1)
add_subdirectory(conv3x3)
# add_subdirectory(conv5x5)
# add_subdirectory(conv6x6)
# add_subdirectory(conv7x7)
add_subdirectory(gemm)
add_subdirectory(sparse_conv_1x1)
# add_subdirectory(sparse_conv_3x3)
# add_subdirectory(sparse_conv_5x5)
# add_subdirectory(sparse_conv_6x6)
# add_subdirectory(sparse_conv_7x7)
# add_subdirectory(sparse_gemm)