function(compile fname)
  add_executable(${fname} ${fname}.cpp)
  target_link_libraries(${fname} dl)
endfunction()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/exe)

compile(test_gemm_fpxfp)
compile(test_gemm_fpxbf)
compile(test_gemm_fpxi8)
compile(test_gemm_fpxi4)

compile(test_gemm_bfxbf)
compile(test_gemm_bfxfp)
compile(test_gemm_bfxi4)
compile(test_gemm_bfxi8)

compile(test_gemm_i4xfp)
compile(test_gemm_i4xbf)
compile(test_gemm_i4xi4)
compile(test_gemm_i4xi8)
compile(test_gemm_i4xi4_pvsq)
compile(test_gemm_i4xi4_outlier)
compile(test_gemm_i4xi8_pvsq)
compile(test_gemm_i4xi8_outlier)
compile(test_gemm_i4xi4n)
compile(test_gemm_i4xi4n_outlier)

compile(test_gemm_i4nxi4)
compile(test_gemm_i4nxi4_outlier)
compile(test_gemm_i4nxi4n)
compile(test_gemm_i4nxi4n_outlier)
compile(test_gemm_i4nxi8)
compile(test_gemm_i4nxi8_outlier)

compile(test_gemm_i8xbf)
compile(test_gemm_i8xfp)
compile(test_gemm_i8xi8)
compile(test_gemm_i8xi4)
compile(test_gemm_i8xi8_pvsq)
compile(test_gemm_i8xi8_outlier)
compile(test_gemm_i8xi4_pvsq)
compile(test_gemm_i8xi4_outlier)
compile(test_gemm_i8xi4n)
compile(test_gemm_i8xi4n_outlier)
