function(compile fname)
  add_executable(${fname} ${fname}.cpp)
  target_link_libraries(${fname} dl)
endfunction()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/exe)

compile(test_sparse_conv_1x1_fpxfp_2of4)
compile(test_sparse_conv_1x1_fpxbf_2of4)
compile(test_sparse_conv_1x1_fpxi8_2of4)
compile(test_sparse_conv_1x1_fpxi4_2of4)

compile(test_sparse_conv_1x1_bfxbf_2of4)
compile(test_sparse_conv_1x1_bfxfp_2of4)
compile(test_sparse_conv_1x1_bfxi4_2of4)
compile(test_sparse_conv_1x1_bfxi8_2of4)

compile(test_sparse_conv_1x1_i4xfp_2of4)
compile(test_sparse_conv_1x1_i4xbf_2of4)
compile(test_sparse_conv_1x1_i4xi4_2of4)
compile(test_sparse_conv_1x1_i4xi8_2of4)
compile(test_sparse_conv_1x1_i4xi4_pvsq_2of4)
compile(test_sparse_conv_1x1_i4xi4_outlier_2of4)
compile(test_sparse_conv_1x1_i4xi8_pvsq_2of4)
compile(test_sparse_conv_1x1_i4xi8_outlier_2of4)
compile(test_sparse_conv_1x1_i4xi4n_2of4)
compile(test_sparse_conv_1x1_i4xi4n_outlier_2of4)

compile(test_sparse_conv_1x1_i4nxi4_2of4)
compile(test_sparse_conv_1x1_i4nxi4_outlier_2of4)
compile(test_sparse_conv_1x1_i4nxi4n_2of4)
compile(test_sparse_conv_1x1_i4nxi4n_outlier_2of4)
compile(test_sparse_conv_1x1_i4nxi8_2of4)
compile(test_sparse_conv_1x1_i4nxi8_outlier_2of4)

compile(test_sparse_conv_1x1_i8xbf_2of4)
compile(test_sparse_conv_1x1_i8xfp_2of4)
compile(test_sparse_conv_1x1_i8xi8_2of4)
compile(test_sparse_conv_1x1_i8xi4_2of4)
compile(test_sparse_conv_1x1_i8xi8_pvsq_2of4)
compile(test_sparse_conv_1x1_i8xi8_outlier_2of4)
compile(test_sparse_conv_1x1_i8xi4_pvsq_2of4)
compile(test_sparse_conv_1x1_i8xi4_outlier_2of4)
compile(test_sparse_conv_1x1_i8xi4n_2of4)
compile(test_sparse_conv_1x1_i8xi4n_outlier_2of4)
