function(compile fname)
  add_executable(${fname} ${fname}.cpp)
  target_link_libraries(${fname} dl)
endfunction()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/exe)

compile(test_sparse_conv_5x5_bfxbf_2of4)
compile(test_sparse_conv_5x5_bfxfp_2of4)
compile(test_sparse_conv_5x5_bfxi8_2of4)
compile(test_sparse_conv_5x5_bfxi4_2of4)

compile(test_sparse_conv_5x5_fpxbf_2of4)
compile(test_sparse_conv_5x5_fpxfp_2of4)
compile(test_sparse_conv_5x5_fpxi8_2of4)
compile(test_sparse_conv_5x5_fpxi4_2of4)

compile(test_sparse_conv_5x5_i8xi8_2of4)
compile(test_sparse_conv_5x5_i8xi8_pvsq_2of4)
compile(test_sparse_conv_5x5_i8xi8_outlier_2of4)
compile(test_sparse_conv_5x5_i8xfp_2of4)
compile(test_sparse_conv_5x5_i8xbf_2of4)
compile(test_sparse_conv_5x5_i8xi4_2of4)
compile(test_sparse_conv_5x5_i8xi4_pvsq_2of4)
compile(test_sparse_conv_5x5_i8xi4_outlier_2of4)
compile(test_sparse_conv_5x5_i8xi4n_2of4)
compile(test_sparse_conv_5x5_i8xi4n_outlier_2of4)

compile(test_sparse_conv_5x5_i4xi4_2of4)
compile(test_sparse_conv_5x5_i4xi4_pvsq_2of4)
compile(test_sparse_conv_5x5_i4xi4_outlier_2of4)
compile(test_sparse_conv_5x5_i4xfp_2of4)
compile(test_sparse_conv_5x5_i4xbf_2of4)
compile(test_sparse_conv_5x5_i4xi8_2of4)
compile(test_sparse_conv_5x5_i4xi8_pvsq_2of4)
compile(test_sparse_conv_5x5_i4xi8_outlier_2of4)