function(compile fname)
  add_executable(${fname} ${fname}.cpp)
  target_link_libraries(${fname} dl)
endfunction()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/exe)

compile(test_sparse_gemm_bfxbf_2of4)
compile(test_sparse_gemm_bfxfp_2of4)
compile(test_sparse_gemm_bfxi8_2of4)
compile(test_sparse_gemm_bfxi4_2of4)

compile(test_sparse_gemm_fpxbf_2of4)
compile(test_sparse_gemm_fpxfp_2of4)
compile(test_sparse_gemm_fpxi8_2of4)
compile(test_sparse_gemm_fpxi4_2of4)

compile(test_sparse_gemm_i8xi8_2of4)
compile(test_sparse_gemm_i8xi8_pvsq_2of4)
compile(test_sparse_gemm_i8xi8_outlier_2of4)
compile(test_sparse_gemm_i8xfp_2of4)
compile(test_sparse_gemm_i8xbf_2of4)
compile(test_sparse_gemm_i8xi4_2of4)
compile(test_sparse_gemm_i8xi4_pvsq_2of4)
compile(test_sparse_gemm_i8xi4_outlier_2of4)
compile(test_sparse_gemm_i8xi4n_2of4)
compile(test_sparse_gemm_i8xi4n_outlier_2of4)

compile(test_sparse_gemm_i4xi4_2of4)
compile(test_sparse_gemm_i4xi4_pvsq_2of4)
compile(test_sparse_gemm_i4xi4_outlier_2of4)
compile(test_sparse_gemm_i4xfp_2of4)
compile(test_sparse_gemm_i4xbf_2of4)
compile(test_sparse_gemm_i4xi8_2of4)
compile(test_sparse_gemm_i4xi8_pvsq_2of4)
compile(test_sparse_gemm_i4xi8_outlier_2of4)