function(compile fname)
  add_executable(${fname} ${fname}.cpp)
  target_link_libraries(${fname} dl)
endfunction()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/exe)

compile(test_vcu_opcode_series)
compile(test_shuffle)
compile(test_sigmoid)
compile(test_swish)
compile(test_softplus)
compile(test_selu)
compile(test_tanh)
compile(test_mish)
compile(test_gelu)
compile(test_reduce_sum)
compile(test_reduce_sum_pipeline)
compile(test_reduce_max)
compile(test_reduce_max_pipeline)
compile(test_reduce_min)
compile(test_fast_tanh)
compile(test_fast_sigmoid)
compile(test_fast_mish)
compile(test_fast_swish)
compile(test_fast_gelu)
compile(test_fast_gelu_pipeline)
compile(test_sin)
compile(test_cos)
compile(test_log)
compile(test_loop)
compile(test_div_elementwise)
compile(test_div_constant)
compile(test_add_elementwise)
compile(test_add_elementwise_pipeline)
compile(test_mul_elementwise)
compile(test_singlevcu_op)
compile(test_fma_elementwise_pipeline)
